Time: 0 ms (100%), Space: 43.7 MB (85.26%) - LeetHub